--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: roboto, 'Helvetica Neue', sans-serif;
-  font-size: 16px;
+  font-size: 18px;
+  margin: 0;
 }
 
 /* remove some browser styling*/
@@ -10,14 +11,17 @@ ul {
   list-style: none;
 }
 
+p,
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+}
+
 a {
   text-decoration: none;
   color: #f9faf8;
-}
-
-img {
-  width: 200px;
-  height: 200px;
 }
 
 /* First section*/
@@ -28,16 +32,86 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-bottom: 100px;
+  gap: 80px;
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
   padding: 40px;
-  width: 70%;
+  width: 80%;
 }
 
 #nav-list {
   display: flex;
+  gap: 40px;
+}
+
+#logo a {
+  text-transform: uppercase;
+  font-size: 24px;
+}
+
+.hero-banner {
+  width: 80%;
+  display: flex;
+  gap: 40px;
+}
+
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 40px;
+  padding-top: 20px;
+}
+
+.hero-text {
+  display: flex;
+  flex-direction: column;
   gap: 20px;
+}
+
+.hero-text p {
+  font-size: 18;
+  color: #e5e7eb;
+}
+
+.hero-text h1 {
+  font-size: 48px;
+}
+
+.hero-content button {
+  box-sizing: border-box;
+  border-radius: 0 10px 10px 0;
+  background-color: #3882f6;
+  border: none;
+  color: #f9faf8;
+  font-size: 18px;
+  padding: 5px 10px;
+  height: 50px;
+  width: 150px;
+}
+
+.newsletter {
+  display: flex;
+}
+
+.hero-image img {
+  width: 400px;
+  height: 400px;
+}
+
+input {
+  border: none;
+  border-radius: 10px 0 0 10px;
+  height: 48px; /* Needed because border of 1px*/
+  flex: 0 1 auto;
+  font-size: 18px;
+}
+
+::placeholder {
+  opacity: 0.7;
+  font-size: 18px;
 }
